Fix footer's z-index.

--- a/index.css
+++ b/index.css
@@ -128,6 +128,7 @@ div.footer {
   background-color: #222222; /*FIXME: use bootstrap's style*/
   text-align: center;
   height: 1.5em;
+  z-index: 10; /*FIXME: to be above semantic UI checkboxes using 1 and 2*/
 }
 
 a.footer,
